--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,5 +7,38 @@
 </head>
 <body>
     <h1>Hello HTML</h1>
+    <p>Hypertext Markup Language</p>
+
+    <!-- tag -->
+    <p></p>
+    <div></div>
+
+    <!-- elements -->
+    <p>This is P.</p>
+    <div>
+        <p></p>
+    </div>
+
+    <!-- Attributes -->
+    <p align="center">This is p element.</p>
+    <p align="right">This is P right.</p>
+    <p align="left">This is P left(Default is left)</p>
+
+    <p class="p-class"id="class-id">This is class Attributes</p>
+
+    <h1>Hello</h1>
+    <hein>Hein</hein>
+
+    <p>Hello,          welcome       to my           class</p>
+
+    <div><span><h1>HeinLearn</h1><p>Learn with practice.</p></span></div>
+
+    <div>
+        <span>
+            <h1>HeinLearn</h1>
+            <p>Learnwithpractice.</p>
+        </span>
+    </div>
+
 </body>
 </html>
