--- a/HTML/head.html
+++ b/HTML/head.html
@@ -23,7 +23,7 @@
     <!-- External style -->
     <link rel="stylesheet" href="style.css">
     <script>
-        alert{"Hello JS"}
+        alert("hello JS")
     </script>
 </head>
 <body>
