--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,6 +39,13 @@
             <p>Learnwithpractice.</p>
         </span>
     </div>
+    <hr>
+    <br>
+    <a href="head.html">Head Lesson</a><br>
+    <a href="body.html">Body Lesson</a><br>
+    <a href="table.html">Table Lesson</a><br>
+    <a href="table2.html">Table2 Lesson</a><br>
+    <a href="assignment.html">Assignment</a>
 
 </body>
 </html>
